--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "url": "https://github.com/TEKcamp/javascript/issues"
   },
   "homepage": "https://github.com/TEKcamp/javascript#readme",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "jest": "^26.6.3"
   }
 }
